feat: profile route added with authentication

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -15,6 +15,6 @@ ktor {
 jwt {
     domain = "https://jwt-provider-domain/"
     audience = "jwt-audience"
-    realm = "ktor sample app"
+    realm = "TravvWorld"
     secret = "secret"
 }
